3320: Fixed p2-list covered by header

--- a/themes/ddbasic/sass/components/header.scss
+++ b/themes/ddbasic/sass/components/header.scss
@@ -653,7 +653,7 @@
     }
   }
   // Hide and show on mobile
-  &.topbar-up {
+  .topbar-up & {
     .topbar {
       @include transition(transform 600ms $ease);
       @include transform(translateY(-64px));
